minor fixes in css. related posts and newsletter horizontal are aligned with footer now

--- a/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
@@ -463,10 +463,10 @@
 
     .related-posts {
 
-        @include desktop {
+        /*@include desktop {
             margin-left: calc(50% - 35vw);
             margin-right: calc(50% - 35vw)
-        }
+        }*/
 
         .title-section {
             text-transform: uppercase;
