--- a/themes/jeo-theme/assets/scss/6-widgets/_w-newsletter.scss
+++ b/themes/jeo-theme/assets/scss/6-widgets/_w-newsletter.scss
@@ -60,10 +60,10 @@
         padding: 35px 113px;
         margin-top: 90px;
 
-        @include desktop {
+        /*@include desktop {
             margin-left: calc(50% - 35vw);
             margin-right: calc(50% - 35vw);
-        }
+        }*/
 
         @include tablet {
             padding: 30px;
@@ -115,7 +115,6 @@
 
             p {
                 &.link {
-                    margin-bottom: 0;
                     text-align: right;
                 }
 
@@ -176,6 +175,7 @@
             font-size: size(14);
             line-height: normal;
             margin: 0px;
+            text-align: center;
         }
     }
 
